[gd_scene load_steps=7 format=3 uid="uid://cry37l0lmq7ul"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_m4xoj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3076"]
bg_color = Color(0.249023, 0.514654, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ax6co"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4vht"]
bg_color = Color(0.695503, 0.695503, 0.695503, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8budo"]
bg_color = Color(0.412152, 0.412152, 0.412152, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs3lr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4xoj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l3076")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.5
offset_top = -284.0
offset_right = 359.5
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.395502, 0.395502)
pivot_offset = Vector2(358.407, 304.871)
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_ax6co")
theme_override_styles/hover = SubResource("StyleBoxFlat_m4vht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8budo")
theme_override_styles/normal = SubResource("StyleBoxFlat_bs3lr")
text = "START"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_ax6co")
theme_override_styles/hover = SubResource("StyleBoxFlat_m4vht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8budo")
theme_override_styles/normal = SubResource("StyleBoxFlat_bs3lr")
text = "HOW TO PLAY"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_ax6co")
theme_override_styles/hover = SubResource("StyleBoxFlat_m4vht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8budo")
theme_override_styles/normal = SubResource("StyleBoxFlat_bs3lr")
text = "ABOUT"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/focus = SubResource("StyleBoxEmpty_ax6co")
theme_override_styles/hover = SubResource("StyleBoxFlat_m4vht")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8budo")
theme_override_styles/normal = SubResource("StyleBoxFlat_bs3lr")
text = "QUIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.0
offset_top = 72.0
offset_right = 141.0
offset_bottom = 168.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Slime's Adventure:
The Beginning..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
